--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -15,7 +15,7 @@ requirements:
     - fruitpy
     - fypp
     - json-fortran
-
+    - numpy 
   run:
     - flap
     - fruit
@@ -38,3 +38,6 @@ test:
     #- mpich2
     - json-fortran
     - openblas
+
+
+    
