--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,6 +8,7 @@ source:
 build:
   binary_relocation: true
 
+    
 requirements:
   build:
     - flap
@@ -22,8 +23,9 @@ requirements:
     - fruit
     - fruitpy
     - openblas
-    #- mpich2
+    - mpich2
     - tqdm
+    - json-fortran 
 
 test:
   files:
