--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: fortress
-  version: '0.1.2'
+  version: '0.1.3'
 
 source:
   path: ..
@@ -35,14 +35,12 @@ test:
   imports:
     - fortress
 
-# test:
-#   files:
-#     - ../test
+test:
+  source_files:
+    - test
+    - makefile
+    - src
 
-#   source_files:
-#     - test
-#     - makefile
-    
 #   requires:
 #     - fruitpy
 #     - fortress
