clean up build (probably not)

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -12,6 +12,10 @@ build:
 requirements:
   build:
     - python
+    - toolchain
+    - libgfortran
+    - libgcc
+    - gfortran_linux-64
     - flap
     - fruit 
     - fruitpy
