--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -16,6 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install Fortran compiler
+        if: startsWith(matrix.os, 'mac')
+        run: brew install gcc
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
