--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -22,6 +22,19 @@ jobs:
 
       - run: python -m pip install -U pip cibuildwheel
 
+
+      - name: Discover gfortran path (macOS)
+        if: startsWith(matrix.os, 'mac')
+        id: gf
+        shell: bash
+        run: |
+          # Homebrew names it gfortran-<major>
+          BREW_BIN="$(brew --prefix)/bin"
+          GFORTRAN="${BREW_BIN}/$(ls "$BREW_BIN" | grep -E '^gfortran-[0-9]+$' | tail -n1)"
+          echo "gfortran=$GFORTRAN" >> "$GITHUB_OUTPUT"
+          echo "openblas_prefix=$(brew --prefix openblas)" >> "$GITHUB_OUTPUT"
+          echo "lapack_prefix=$(brew --prefix lapack)" >> "$GITHUB_OUTPUT"
+          
       - name: Install Intel oneAPI Fortran
         if: startsWith(matrix.os, 'windows')
         uses: rscohn2/setup-oneapi@v0
